# linelisttools

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py  tox.ini
docs/: conf.py  index.rst
docs/api/: modules.rst  pymarvel.rst
linelisttools/: concurrence.py  format.py  hyperfine.py  marvel.py  plot.py  pymarvel.py  states.py
pymarvel/: format.py  hyperfine.py  plot.py  pymarvel.py  states.py
tests/: diatomic_tutorial.ipynb  test_format.py  test_hyperfine.py  test_marvel.py  test_plot.py  test_pymarvel.py  test_states.py
tests/inputs/: AlO_MARVEL_Energies_1.9-clean.txt  CheckTransitions.txt  SO_MarvelEnergies.states  VO_4hfs_MARVEL_Energies-2.0.txt  VO_MARVEL_Energies-1.8.1-final.txt  VO_segment-2.0.txt  VO_transitions-2.0.txt  segment_N2O_0414.txt  state_format_test.txt  trans19May22.txt
