[tool.poetry]
name = "linelisttools"
version = "0.1.0"
description = "Various tools for handling and updating line lists. Intended to be used with the ExoMol line list format."
authors = ["Charles Bowesman"]
license = "GPL"

[tool.poetry.dependencies]
python = ">3.10,<3.11"
numpy = ">=1.18,<1.25"
numba = "^0.55.2"
astropy = "^5.1"
pandas = "^1.4.3"
numexpr = "^2.8.1"
click = "^8.1.3"
tqdm = "^4.64.0"
scikit-learn = "^1.1.1"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipython = "^8.4.0"
Sphinx = "^5.0.2"
#sphinx-rtd-theme = "^1.0.0"
furo = "^2022.6.21"
sphinx-autobuild = "^2021.3.14"
tox = "^3.25.0"
pre-commit = "^2.19.0"
black = "^22.3.0"
matplotlib = "^3.5.2"
ipympl = "^0.9.1"
line-profiler = "^3.5.1"
plotly = "^5.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
